<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ejercicio3.Ejercicio3">

    <LinearLayout
        android:gravity="center"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/primerBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PrimerBotonEjercicio3" />

        <Button
            android:id="@+id/segundoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segundoBotonEjercicio3" />

        <Button
            android:id="@+id/tercerBoton"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:text="@string/tercerBotonEjercicio3" />

        <Button
            android:id="@+id/cuartoBoton"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/cuartoBotonEjercicio3" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>